--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -9,119 +9,134 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edray.ringoffire.RulesActivity">
 
-    <TextView
+    <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2: "
-        android:id="@+id/textView5"
+        android:text="7"
+        android:id="@+id/card7"
+        android:onClick="setRule"
         android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/card8" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3: "
-        android:id="@+id/textView6"
-        android:layout_below="@+id/textView5"
+        android:text="8"
+        android:id="@+id/card8"
+        android:onClick="setRule"
+        android:layout_below="@+id/card7"
         android:layout_alignParentStart="true" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="4: "
-        android:id="@+id/textView7"
-        android:layout_below="@+id/textView6"
+        android:text="9"
+        android:id="@+id/card9"
+        android:onClick="setRule"
+        android:layout_below="@+id/card8"
         android:layout_alignParentStart="true" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="5: "
-        android:id="@+id/textView8"
-        android:layout_below="@+id/textView7"
+        android:text="10"
+        android:id="@+id/card10"
+        android:onClick="setRule"
+        android:layout_below="@+id/card9"
         android:layout_alignParentStart="true" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="6: "
-        android:id="@+id/textView9"
-        android:layout_below="@+id/textView8"
+        android:text="B"
+        android:id="@+id/cardJ"
+        android:onClick="setRule"
+        android:layout_below="@+id/card10"
         android:layout_alignParentStart="true" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="7: "
-        android:id="@+id/textView10"
-        android:layout_below="@+id/textView9"
-        android:layout_alignParentStart="true" />
+        android:text="2"
+        android:id="@+id/card2"
+        android:onClick="setRule"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="8: "
-        android:id="@+id/textView11"
-        android:layout_below="@+id/textView10"
-        android:layout_alignParentStart="true" />
+        android:text="3"
+        android:id="@+id/card3"
+        android:onClick="setRule"
+        android:layout_below="@+id/card2"
+        android:layout_alignParentEnd="true" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="9: "
-        android:id="@+id/textView12"
-        android:layout_below="@+id/textView11"
-        android:layout_alignParentStart="true" />
+        android:text="4"
+        android:id="@+id/card4"
+        android:onClick="setRule"
+        android:layout_below="@+id/card3"
+        android:layout_alignParentEnd="true" />
 
-    <TextView
+    <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="10: "
-        android:id="@+id/textView13"
-        android:layout_below="@+id/textView12"
-        android:layout_alignParentStart="true" />
+        android:text="5"
+        android:id="@+id/card5"
+        android:onClick="setRule"
+        android:layout_below="@+id/card4"
+        android:layout_alignStart="@+id/card4"
+        android:layout_alignEnd="@+id/card4" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="B: "
-        android:id="@+id/textView14"
-        android:layout_below="@+id/textView13"
-        android:layout_alignParentStart="true" />
+        android:text="6"
+        android:id="@+id/card6"
+        android:onClick="setRule"
+        android:layout_below="@+id/card5"
+        android:layout_alignStart="@+id/card5" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="D: "
-        android:id="@+id/textView15"
-        android:layout_below="@+id/textView14"
+        android:text="D"
+        android:id="@+id/cardQ"
+        android:onClick="setRule"
+        android:layout_below="@+id/cardJ"
         android:layout_alignParentStart="true" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="K: "
-        android:id="@+id/textView16"
-        android:layout_below="@+id/textView15"
+        android:text="K"
+        android:id="@+id/cardK"
+        android:onClick="setRule"
+        android:layout_below="@+id/cardQ"
         android:layout_alignParentStart="true" />
 
-    <TextView
+    <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="A: "
-        android:id="@+id/textView17"
-        android:layout_below="@+id/textView16"
+        android:text="A"
+        android:id="@+id/cardA"
+        android:onClick="setRule"
+        android:layout_below="@+id/cardK"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <Button
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Du hast ein Date! Wähle eine Person, die jedes Mal trinken muss, wenn du es tust."
-        android:id="@+id/textView18"
-        android:layout_alignBaseline="@+id/textView8"
-        android:layout_alignBottom="@+id/textView8"
-        android:layout_toEndOf="@+id/textView13"
-        android:layout_marginStart="48dp" />
-
+        android:layout_height="wrap_content"
+        android:text="Zurück"
+        android:id="@+id/backToMenuButton"
+        android:layout_below="@+id/cardA"
+        android:onClick="back"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp" />
 </RelativeLayout>
