Card images are now appearing when drawing a card

--- a/app/src/main/res/layout/activity_rules.xml
+++ b/app/src/main/res/layout/activity_rules.xml
@@ -135,8 +135,8 @@
         android:layout_height="wrap_content"
         android:text="Zurück"
         android:id="@+id/backToMenuButton"
-        android:layout_below="@+id/cardA"
         android:onClick="back"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="28dp" />
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
