--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -25,9 +25,9 @@
         android:text="Ziehen"
         android:id="@+id/drawButton"
         android:onClick="draw"
-        android:layout_below="@+id/textView"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="81dp" />
+        android:layout_marginBottom="52dp" />
 
     <TextView
         android:layout_width="fill_parent"
@@ -43,32 +43,15 @@
         android:layout_below="@+id/breakText"
         android:layout_alignParentStart="true" />
 
-    <TextView
-        android:layout_width="fill_parent"
+    <ImageView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/debugArray"
-        android:layout_below="@+id/cardText"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/debugCounter"
-        android:layout_below="@+id/debugArray"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/debugRandom"
-        android:layout_below="@+id/debugCounter"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/debugNewCard"
-        android:layout_below="@+id/debugRandom"
-        android:layout_alignParentStart="true" />
+        android:id="@+id/imageView"
+        android:maxHeight="50dp"
+        android:maxWidth="30dp"
+        android:layout_alignStart="@+id/drawButton"
+        android:layout_below="@+id/textView"
+        android:layout_alignEnd="@+id/drawButton"
+        android:layout_above="@+id/breakText" />
 
 </RelativeLayout>
